Modifying docker-compose.yml to not rely on an internal dell appliance build.   Documenting the startup process.

--- a/docker/dell/docker-compose.yml
+++ b/docker/dell/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: consul:0.7.5
     # NOTE: for additional nodes, add "-join <ip of primary> make sure the encrypt values match"
     #command: agent -server -ui -bind ${HOST_IP} -client 0.0.0.0 -log-level "info" -encrypt "Av0SYCoqCn8+jocR9EClTg=="
-    command: agent -server -ui -bind ${HOST_IP} -client 0.0.0.0 -log-level "info" -encrypt "KEY_PLACEHOLDER"
+    command: agent -server -ui -bind ${HOST_IP} -client 0.0.0.0 -log-level "info"
     restart: always
     network_mode: "host"
     ports:
@@ -17,18 +17,16 @@ services:
     - "8400:8400"
     - "8500:8500"
     - "53:53"
-    volumes:
-    - /etc/ssl:/etc/ssl
-    - /usr/local/share/ca-certificates:/usr/local/share/ca-certificates
     # uncoment the line below to persist/reuse data after container is destroyed
+    #volumes:
     #- /var/consul/data:/consul/data
     mem_limit: 512m
     environment:
       # for secondary node set bootstrap to false
-      CONSUL_LOCAL_CONFIG: '{"bootstrap": true, "enable_syslog": false, "verify_server_hostname": false, "verify_incoming": false, "verify_outgoing": false, "cert_file": "/etc/ssl/certs/${HOST}.crt", "key_file": "/etc/ssl/private/${HOST}.key", "ca_file": "/usr/local/share/ca-certificates/${HOST}.crt" }'
+      CONSUL_LOCAL_CONFIG: '{"bootstrap": true, "enable_syslog": false, "verify_server_hostname": false, "verify_incoming": false, "verify_outgoing": false }'
 
-  service-gateway-zuul:
-    container_name: service-gateway-zuul
+  gateway:
+    container_name: gateway
     image: rackhd/gateway:latest
     depends_on:
     - consul
@@ -37,17 +35,13 @@ services:
     - 46020:46020
     extra_hosts:
     - "service-registry:${REGISTRY_IP}"
-    volumes:
-    - /var/log/dell/:/var/log/dell/
-    - /etc/ssl/:/etc/ssl
     mem_limit: 512m
     environment:
     - "GATEWAY_HOST=${HOST_IP}"
     - _JAVA_OPTIONS=-Xmx64m -Xss256k
-    #- "JAVA_OPTS=-Dsmi.gateway=http://100.68.123.110:46020"
 
-  service-device-discovery:
-    container_name: service-device-discovery
+  device-discovery:
+    container_name: device-discovery
     image: rackhd/device-discovery:latest
     depends_on:
     - consul
@@ -56,15 +50,15 @@ services:
     - 46002:46002
     extra_hosts:
     - "service-registry:${REGISTRY_IP}"
-    volumes:
-    - /var/log/dell/:/var/log/dell/
-    - /etc/ssl/:/etc/ssl
+    #volumes:
+    #- /var/log/dell/:/var/log/dell/
+    #- /etc/ssl/:/etc/ssl
     mem_limit: 768m
     environment:
     - "SPRING_PROFILES_ACTIVE=consul"
     - _JAVA_OPTIONS=-Xmx128m -Xss228k
 
-  service-server-action:
+  dell-server-action:
     container_name: dell-server-action
     image: rackhd/dell-server-action:latest
     depends_on:
@@ -74,15 +68,15 @@ services:
     - 46007:46007
     extra_hosts:
     - "service-registry:${REGISTRY_IP}"
-    volumes:
-    - /var/log/dell/:/var/log/dell/
-    - /etc/ssl/:/etc/ssl
+    #volumes:
+    #- /var/log/dell/:/var/log/dell/
+    #- /etc/ssl/:/etc/ssl
     mem_limit: 512m
     environment:
     - "SPRING_PROFILES_ACTIVE=consul"
     - _JAVA_OPTIONS=-Xmx64m -Xss256k
 
-  service-chassis-inventory:
+  dell-chassis-inventory:
     container_name: dell-chassis-inventory
     image: rackhd/dell-chassis-inventory:latest
     depends_on:
@@ -92,16 +86,16 @@ services:
     - 46001:46001
     extra_hosts:
     - "service-registry:${REGISTRY_IP}"
-    volumes:
-    - /var/log/dell/:/var/log/dell/
-    - /etc/ssl/:/etc/ssl
+    #volumes:
+    #- /var/log/dell/:/var/log/dell/
+    #- /etc/ssl/:/etc/ssl
     mem_limit: 768m
     environment:
     - "SPRING_PROFILES_ACTIVE=consul"
     - _JAVA_OPTIONS=-Xmx128m -Xss256k
 
-  service-server-inventory:
-    container_name: service-server-inventory
+  dell-server-inventory:
+    container_name: dell-server-inventory
     image: rackhd/dell-server-inventory:latest
     depends_on:
     - consul
@@ -110,16 +104,16 @@ services:
     - 46011:46011
     extra_hosts:
     - "service-registry:${REGISTRY_IP}"
-    volumes:
-    - /var/log/dell/:/var/log/dell/
-    - /etc/ssl/:/etc/ssl
+    #volumes:
+    #- /var/log/dell/:/var/log/dell/
+    #- /etc/ssl/:/etc/ssl
     mem_limit: 1024m
     environment:
     - "SPRING_PROFILES_ACTIVE=consul"
     - _JAVA_OPTIONS=-Xmx128m -Xss256k
 
-  service-server-configuration-profile:
-    container_name: service-server-configuration-profile
+  dell-server-configuration-profile:
+    container_name: dell-server-configuration-profile
     image: rackhd/dell-server-configuration-profile:latest
     depends_on:
     - consul
@@ -129,16 +123,16 @@ services:
     extra_hosts:
     - "service-registry:${REGISTRY_IP}"
     privileged: true
-    volumes:
-    - /var/log/dell/:/var/log/dell/
-    - /etc/ssl/:/etc/ssl
+    #volumes:
+    #- /var/log/dell/:/var/log/dell/
+    #- /etc/ssl/:/etc/ssl
     mem_limit: 768m
     environment:
     - "SPRING_PROFILES_ACTIVE=consul"
     - _JAVA_OPTIONS=-Xmx128m -Xss256k
 
-  service-server-firmwareupdate:
-    container_name: service-server-firmwareupdate
+  dell-server-firmwareupdate:
+    container_name: dell-server-firmwareupdate
     image: rackhd/dell-server-firmwareupdate:latest
     depends_on:
     - consul
@@ -148,33 +142,15 @@ services:
     extra_hosts:
     - "service-registry:${REGISTRY_IP}"
     privileged: true
-    volumes:
-    - /var/log/dell:/var/log/dell
+    #volumes:
+    #- /var/log/dell:/var/log/dell
     mem_limit: 1024m
     environment:
     - "SPRING_PROFILES_ACTIVE=consul"
     - _JAVA_OPTIONS=-Xmx128m -Xss256k
 
-  #service-server-os-deployment:
-  #  container_name: service-server-os-deployment
-  #  image: docker-registry.smi.delllabs.net/dell_smi/service-server-os-deployment:latest
-  #  depends_on:
-  #  - consul
-  #  network_mode: "host"
-  #  ports:
-  #  - 46014:46014
-  #  extra_hosts:
-  #  - "service-registry:${REGISTRY_IP}"
-  #  privileged: true
-  #  volumes:
-  #  - /var/log/dell:/var/log/dell
-  #  mem_limit: 512m
-  #  environment:
-  #  - "SPRING_PROFILES_ACTIVE=consul"
-  #  - _JAVA_OPTIONS=-Xmx64m -Xss256k
-
-  service-virtualnetwork:
-    container_name: service-virtualnetwork
+  virtualnetwork:
+    container_name: virtualnetwork
     image: rackhd/virtualnetwork:latest
     depends_on:
     - consul
@@ -184,18 +160,16 @@ services:
     - 46016:46016
     extra_hosts:
     - "service-registry:${REGISTRY_IP}"
-    volumes:
-    - /var/log/dell/:/var/log/dell/
-    - /etc/ssl/:/etc/ssl/
+    #volumes:
+    #- /var/log/dell/:/var/log/dell/
+    #- /etc/ssl/:/etc/ssl/
     mem_limit: 512m
     environment:
     - "SPRING_PROFILES_ACTIVE=consul"
     - _JAVA_OPTIONS=-Xmx64m -Xss256k
-    #- "JAVA_OPTS=-Dspring.cloud.consul.discovery.ipAddress=${HOST_IP}"
-    #- "JAVA_OPTS=-Dspring.cloud.consul.config.acl-token=VIRTUALNETWORK_ACL_TOKEN -Dspring.cloud.consul.discovery.health-check-url=https://172.31.128.1:46016/health"
 
-  service-virtualidentity:
-    container_name: service-virtualidentity
+  virtualidentity:
+    container_name: virtualidentity
     image: rackhd/virtualidentity:latest
     depends_on:
     - consul
@@ -205,18 +179,16 @@ services:
     - 46015:46015
     extra_hosts:
     - "service-registry:${REGISTRY_IP}"
-    volumes:
-    - /var/log/dell/:/var/log/dell/
-    - /etc/ssl/:/etc/ssl
+    #volumes:
+    #- /var/log/dell/:/var/log/dell/
+    #- /etc/ssl/:/etc/ssl
     mem_limit: 512m
     environment:
     - "SPRING_PROFILES_ACTIVE=consul"
     - _JAVA_OPTIONS=-Xmx64m -Xss256k
-    #- "JAVA_OPTS=-Dspring.cloud.consul.discovery.ipAddress=${HOST_IP}"
-    #- "JAVA_OPTS=-Dspring.cloud.consul.config.acl-token=VIRTUALIDENTITY_ACL_TOKEN -Dspring.cloud.consul.discovery.health-check-url=https://172.31.128.1:46015/health"
 
-  service-powerthermal-monitoring:
-    container_name: service-powerthermal-monitoring
+  dell-powerthermal-monitoring:
+    container_name: dell-powerthermal-monitoring
     image: rackhd/dell-powerthermal-monitoring:latest
     depends_on:
     - consul
@@ -233,27 +205,6 @@ services:
     - "SPRING_PROFILES_ACTIVE=consul"
     - _JAVA_OPTIONS=-Xmx128m -Xss256k
 
-  #service-swagger-aggregator:
-  # container_name: service-swagger-aggregator
-  #  image: docker-registry.smi.delllabs.net/dell_smi/service-swagger-aggregator:latest
-    #command: --add-host localhost -h service-resources
-  #  depends_on:
-  #  - consul
-  #  network_mode: "host"
-  #  ports:
-  #  - 46021:46021
-  #  extra_hosts:
-  #  - "service-registry:${REGISTRY_IP}"
-  #  volumes:
-  #  - /home/devuser/config-repo:/home/devuser/config-repo
-  #  - /var/log/dell/:/var/log/dell/
-  #  - /etc/ssl/:/etc/ssl
-  #  mem_limit: 512m
-  #  environment:
-  #  - "SPRING_PROFILES_ACTIVE=consul"
-  #  - "SWAGGER_HOST=http://${HOST_IP}"
-  #  - _JAVA_OPTIONS=-Xmx64m -Xss256k
-
   postgresql:
     container_name: postgresql
     image: postgres:9.6.1-alpine
@@ -262,9 +213,3 @@ services:
     mem_limit: 512m
     environment:
       - POSTGRES_PASSWORD=Dell123$$
-
-  #rabbitmq:
-    #container_name: rabbitmq
-    #image: rabbitmq:latest
-    #ports:
-    #- 46017:5672
