--- a/packer/ansible/roles/mongodb/tasks/main.yml
+++ b/packer/ansible/roles/mongodb/tasks/main.yml
@@ -1,9 +1,24 @@
 ---
-- name: Install MongoDB
+- name: Install MongoDB 2.4.9
   apt: pkg={{ item }} state=installed
   with_items:
     - mongodb=1:2.4.9-1ubuntu2
   sudo: yes
+  when: ansible_distribution == 'Ubuntu' and ansible_distribution_version == '14.02'
+
+- name: Install MongoDB 2.6.10
+  apt: pkg={{ item }} state=installed
+  with_items:
+    - mongodb=1:2.6.10-0ubuntu2
+  sudo: yes
+  when: ansible_distribution == 'Ubuntu' and ansible_distribution_version == '16.04'
+
+- name: Install MongoDB 2.6.10
+  apt: pkg={{ item }} state=installed
+  with_items:
+    - mongodb
+  sudo: yes
+  when: ansible_distribution != 'Ubuntu'
 
 - name: Copy mongodb config file to home directory
   copy: src=mongodb.conf dest=/etc
