--- a/docker/docker-compose-mini.yml
+++ b/docker/docker-compose-mini.yml
@@ -113,4 +113,11 @@ services:
       - "./files/mount:/RackHD/on-tftp/static/tftp"
       - "./monorail:/opt/monorail"
 
+  ucs-service: # 7080
+    build: "../ucs-service"
+    image: rackhd/ucs-service:${TAG}
+    network_mode: "host"
+    privileged: true
+
+
 
