--- a/test/requirements.txt
+++ b/test/requirements.txt
@@ -24,6 +24,7 @@ setuptools==33.1.1
 # urllib3 1.20 breaks CIT test, specify version as a temp solution
 urllib3==1.19.1
 ucsmsdk==0.9.2.0
+exrex==0.10.4
 
 # WARNING: do not just replace this file with "pip freeze > requirements.txt".
 # You need to keep the following line as is! (freeze will turn it into
