--- a/test/requirements.txt
+++ b/test/requirements.txt
@@ -25,6 +25,9 @@ setuptools==33.1.1
 urllib3==1.19.1
 ucsmsdk==0.9.2.0
 exrex==0.10.4
+pyOpenSSL==17.0.0
+ndg-httpsclient==0.4.2
+pyasn1==0.2.3
 
 # WARNING: do not just replace this file with "pip freeze > requirements.txt".
 # You need to keep the following line as is! (freeze will turn it into
