Moving SMI rackhd config file to opt monorail directory

--- a/packer/ansible/roles/dell/tasks/main.yml
+++ b/packer/ansible/roles/dell/tasks/main.yml
@@ -1,8 +1,8 @@
 ---
-- name: Create directory for dell config file
-  file: path=/opt/dell/ state=directory mode=0777
+- name: Create directory for SMI config file
+  file: path=/opt/monorail/ state=directory mode=0777
   sudo: yes
 
-- name: Load dell conf onto guest
-  copy: src=wsmanConfig.json dest=/opt/dell/wsmanConfig.json
+- name: Load SMI conf onto guest
+  copy: src=wsmanConfig.json dest=/opt/monorail/smiConfig.json
   sudo: yes
