Moving ansible role for dell smiConfig into monorail role

--- a/packer/ansible/roles/monorail/tasks/main.yml
+++ b/packer/ansible/roles/monorail/tasks/main.yml
@@ -6,3 +6,7 @@
 - name: Load monorail conf onto guest
   copy: src=config.json dest=/opt/monorail/config.json
   sudo: yes
+
+- name: Load smi conf onto guest
+  copy: src=smiConfig.json dest=/opt/monorail/smiConfig.json
+  sudo: yes
