--- a/docker/monorail/config.json
+++ b/docker/monorail/config.json
@@ -7,6 +7,7 @@
     "authTokenExpireIn": 86400,
     "authTokenSecret": "RackHDRocks!",
     "authUsername": "admin",
+    "autoCreateObm": "true",
     "dhcpLeasesPath": "/var/lib/dhcp/dhcpd.leases",
     "dhcpGateway": "172.31.128.1",
     "dhcpProxyBindAddress": "0.0.0.0",
