--- a/debian/control
+++ b/debian/control
@@ -20,6 +20,7 @@ Depends: ${misc:Depends},
          on-syslog,
          on-taskgraph,
          on-tftp,
+         on-web-ui,
          on-imagebuilder,
          rabbitmq-server,
 Description: base package for all of RackHD
