--- a/docker/docker-compose-elk.yml
+++ b/docker/docker-compose-elk.yml
@@ -70,7 +70,6 @@ services:
       - mongo
       - rabbitmq
       - statsd
-      - tasks
     image: rackhd/on-http:${TAG}
     network_mode: "host"
     privileged: true
@@ -113,7 +112,6 @@ services:
       - rabbitmq
       - syslog
       - statsd
-      - tasks
     image: rackhd/on-taskgraph:${TAG}
     network_mode: "host"
     privileged: true
@@ -134,6 +132,22 @@ services:
     privileged: true
     volumes:
       - "./files/mount:/RackHD/on-tftp/static/tftp"
+      - "./monorail:/opt/monorail"
+
+  wss: # 9100
+    build: "../on-wss"
+    depends_on:
+      - files
+      - http
+      - logstash
+      - mongo
+      - rabbitmq
+      - statsd
+      - syslog
+    image: rackhd/on-wss:${TAG}
+    network_mode: "host"
+    privileged: true
+    volumes:
       - "./monorail:/opt/monorail"
 
   # ELK services
