--- a/example/dev-env-setup/roles/mongodb/tasks/main.yml
+++ b/example/dev-env-setup/roles/mongodb/tasks/main.yml
@@ -1,3 +1,3 @@
----
-- name: install mongodb
-  apt: pkg=mongodb state=installed
+- name: restart mongodb
+  service: name=mongodb state=started
+  sudo: yes
