--- a/packer/ansible/roles/monorail/files/config.json
+++ b/packer/ansible/roles/monorail/files/config.json
@@ -26,14 +26,6 @@
         },
         {
             "address": "172.31.128.1",
-            "port": 9080,
-            "httpsEnabled": false,
-            "proxiesEnabled": true,
-            "authEnabled": false,
-            "yamlName": ["monorail-2.0-sb.yaml"]
-        },
-        {
-            "address": "172.31.128.1",
             "port": 9988,
             "httpsEnabled": false,
             "proxiesEnabled": true,
@@ -41,6 +33,13 @@
             "yamlName": ["monorail-2.0-sb.yaml"]
         }
     ],
+    "taskGraphEndpoint": {
+        "address": "172.31.128.1",
+        "port": 9080
+        },
+    "fileServerAddress": "172.31.128.1",
+    "fileServerPort": 8080,
+    "fileServerPath": "/",
     "httpDocsRoot": "./build/apidoc",
     "httpFileServiceRoot": "./static/files",
     "httpFileServiceType": "FileSystem",
