--- a/packer/ansible/roles/monorail/files/config.json
+++ b/packer/ansible/roles/monorail/files/config.json
@@ -2,7 +2,7 @@
     "amqp": "amqp://localhost",
     "apiServerAddress": "172.31.128.1",
     "rackhdPublicIp": null, 
-    "apiServerPort": 9080,
+    "apiServerPort": 9030,
     "dhcpGateway": "172.31.128.1",
     "dhcpProxyBindAddress": "172.31.128.1",
     "dhcpProxyBindPort": 4011,
@@ -26,6 +26,14 @@
         },
         {
             "address": "172.31.128.1",
+            "port": 9080,
+            "httpsEnabled": false,
+            "proxiesEnabled": true,
+            "authEnabled": false,
+            "yamlName": ["monorail-2.0-sb.yaml"]
+        },
+        {
+            "address": "172.31.128.1",
             "port": 9988,
             "httpsEnabled": false,
             "proxiesEnabled": true,
@@ -35,10 +43,10 @@
     ],
     "taskGraphEndpoint": {
         "address": "172.31.128.1",
-        "port": 9080
-        },
+        "port": 9030
+    },
     "fileServerAddress": "172.31.128.1",
-    "fileServerPort": 8080,
+    "fileServerPort": 9080,
     "fileServerPath": "/",
     "httpDocsRoot": "./build/apidoc",
     "httpFileServiceRoot": "./static/files",
