--- a/docker/docker-compose-elk.yml
+++ b/docker/docker-compose-elk.yml
@@ -76,6 +76,7 @@ services:
     volumes:
       - "./files/mount/common:/RackHD/on-http/static/http/common"
       - "./monorail:/opt/monorail"
+      - "./data:/RackHD/on-http/data"
 
   statsd: # 8125/udp
     build: "../on-statsd"
@@ -112,11 +113,13 @@ services:
       - rabbitmq
       - syslog
       - statsd
+      - http
     image: rackhd/on-taskgraph:${TAG}
     network_mode: "host"
     privileged: true
     volumes:
       - "./monorail:/opt/monorail"
+      - "./data:/RackHD/on-http/data"
 
   tftp: # 69/udp
     build: "../on-tftp"
