--- a/packer/ansible/roles/mongodb/tasks/main.yml
+++ b/packer/ansible/roles/mongodb/tasks/main.yml
@@ -2,7 +2,7 @@
 - name: Install MongoDB
   apt: pkg={{ item }} state=installed
   with_items:
-    - mongodb=1:2.4.9-1ubuntu2
+    - mongodb
   sudo: yes
 
 - name: Copy mongodb config file to home directory
