fix infrasim demo to run on Docker for Windows

--- a/example/infrasim/Dockerfile
+++ b/example/infrasim/Dockerfile
@@ -6,4 +6,7 @@ COPY default.yml /root/.infrasim/.node_map/
 
 COPY start_infrasim.sh .
 
+RUN apt-get install -y dos2unix
+RUN dos2unix start_infrasim.sh 
+
 ENTRYPOINT ./start_infrasim.sh
